--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Zhuoyan(Joy) Guo
-#logo:
+logo: /assets/img/headshot_circle.png
 #description:
 show_downloads: true
 theme: jekyll-theme-minimal
