--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Zhuoyan(Joy) Guo
-logo: assets/img/profile_pic.png
+logo: assets/img/IMG_8558.png
 #description:
 show_downloads: true
 theme: jekyll-theme-minimal
